# SIDE-tech

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
LLVMIntegration/: CMakeLists.txt  SIDEtechPasses.cpp
SIDE/: CMakeLists.txt  mainwindow.ui
TargetIntegration/: CMakeLists.txt  IntegrationAPI.cpp
